# primitive-module

./: .gitignore  README.md  pyproject.toml  setup.cfg
primitive_module/: __init__.py
primitive_module/_dict/: __init__.py  json_io.py
primitive_module/_list/: __init__.py
