[project]
name = "primitive-module"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.setuptools.packages.find]
include = ["primitive_module", "primitive_module.*"]